--- a/LLM/0_data_extract_with_src.ipynb
+++ b/LLM/0_data_extract_with_src.ipynb
@@ -41,14 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df = pd.read_csv('../../data/annotation_100_input_241201.csv')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,149 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>link</th>\n",
-       "      <th>Q_difficulty</th>\n",
-       "      <th>A_difficulty</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>77293473</td>\n",
-       "      <td>https://stackoverflow.com/questions/77293473</td>\n",
-       "      <td>Basic</td>\n",
-       "      <td>Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>77404924</td>\n",
-       "      <td>https://stackoverflow.com/questions/77404924</td>\n",
-       "      <td>Basic</td>\n",
-       "      <td>Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>77249095</td>\n",
-       "      <td>https://stackoverflow.com/questions/77249095</td>\n",
-       "      <td>Basic</td>\n",
-       "      <td>Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>77076663</td>\n",
-       "      <td>https://stackoverflow.com/questions/77076663</td>\n",
-       "      <td>Advanced</td>\n",
-       "      <td>Advanced</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>77019129</td>\n",
-       "      <td>https://stackoverflow.com/questions/77019129</td>\n",
-       "      <td>Intermediate</td>\n",
-       "      <td>Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>76992629</td>\n",
-       "      <td>https://stackoverflow.com/questions/76992629</td>\n",
-       "      <td>Intermediate</td>\n",
-       "      <td>Advanced</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>77370805</td>\n",
-       "      <td>https://stackoverflow.com/questions/77370805</td>\n",
-       "      <td>Intermediate</td>\n",
-       "      <td>Intermediate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>76784524</td>\n",
-       "      <td>https://stackoverflow.com/questions/76784524</td>\n",
-       "      <td>Basic</td>\n",
-       "      <td>Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>76608783</td>\n",
-       "      <td>https://stackoverflow.com/questions/76608783</td>\n",
-       "      <td>Intermediate</td>\n",
-       "      <td>Basic</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>76697269</td>\n",
-       "      <td>https://stackoverflow.com/questions/76697269</td>\n",
-       "      <td>Intermediate</td>\n",
-       "      <td>Intermediate</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         id                                          link  Q_difficulty  \\\n",
-       "0  77293473  https://stackoverflow.com/questions/77293473         Basic   \n",
-       "1  77404924  https://stackoverflow.com/questions/77404924         Basic   \n",
-       "2  77249095  https://stackoverflow.com/questions/77249095         Basic   \n",
-       "3  77076663  https://stackoverflow.com/questions/77076663      Advanced   \n",
-       "4  77019129  https://stackoverflow.com/questions/77019129  Intermediate   \n",
-       "5  76992629  https://stackoverflow.com/questions/76992629  Intermediate   \n",
-       "6  77370805  https://stackoverflow.com/questions/77370805  Intermediate   \n",
-       "7  76784524  https://stackoverflow.com/questions/76784524         Basic   \n",
-       "8  76608783  https://stackoverflow.com/questions/76608783  Intermediate   \n",
-       "9  76697269  https://stackoverflow.com/questions/76697269  Intermediate   \n",
-       "\n",
-       "   A_difficulty  \n",
-       "0         Basic  \n",
-       "1         Basic  \n",
-       "2         Basic  \n",
-       "3      Advanced  \n",
-       "4  Intermediate  \n",
-       "5      Advanced  \n",
-       "6  Intermediate  \n",
-       "7         Basic  \n",
-       "8         Basic  \n",
-       "9  Intermediate  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_one.head(10)"
+    "# df_one.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = df[~(df['Q_difficulty']=='-') & ~(df['A_difficulty']=='-') ].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +183,7 @@
        "4  Intermediate  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,21 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +277,7 @@
        "4  77019129  https://stackoverflow.com/questions/77019129  Intermediate"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +406,7 @@
        "[76 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +436,7 @@
        "'77293473, 77404924, 77249095, 77076663, 77019129, 76992629, 77370805, 76784524, 76608783, 76697269, 76317584, 76570219, 76302571, 76548866, 76541602, 76264395, 76169010, 76169378, 76059076, 76045819, 76085427, 75779691, 75862649, 75637544, 75460677, 75454689, 75283999, 75279786, 75198212, 75057003, 75179892, 75239843, 74778102, 74774389, 74760874, 74751254, 74693871, 74844950, 74804354, 77553477, 77543317, 77511053, 77467788, 77155599, 77291783, 77150535, 77068633, 77020489, 76917593, 76798081, 76774917, 76675433, 76427264, 76331128, 76367594, 76481433, 76115814, 76040179, 75870881, 75995957, 75711831, 75789316, 75942768, 75492157, 75352739, 75333570, 75266730, 75243277, 75022065, 74936129, 75099305, 74793352, 74727945, 74700764, 77538219, 77464645'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +607,7 @@
        "4  <p>I need help for my school project. I am tak...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,24 +627,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def chg_tag(code):\n",
     "    st_pattern = r'<pre(?: class=\"[^\"]*\")?><code>'\n",
-    "    dst = \"```\"\n",
-    "    code = re.sub(st_pattern, dst, code, count=0, flags=0)\n",
-    "\n",
+    "    st_dst = \"```python\\n\"\n",
+    "    code = re.sub(st_pattern, st_dst, code, count=0, flags=0)\n",
+    "    \n",
+    "    end_dst = \"```\"\n",
     "    end_pattern =r'</code></pre>'\n",
-    "    code = re.sub(end_pattern, dst, code, count=0, flags=0)\n",
+    "    code = re.sub(end_pattern, end_dst, code, count=0, flags=0)\n",
     "    return code\n",
     "                                                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,11 +682,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_output['question'] = '<Title>'+q_output['title'].map(str)+'</Title>. <Question>'+q_output['clean_body'].map(str)+'</Question>'\n"
+    "q_output['question'] = \"\"\"<Title>\"\"\"+q_output['title'].map(str)+\"\"\"</Title>. <Question>\"\"\"+q_output['clean_body'].map(str)+\"\"\"</Question> Let's think through the difficulty of question carefully, step by step. \"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# q_output[['id', 'question', 'answer']].to_csv('../../data/q_output_code_y_241201.csv')"
    ]
   },
   {
@@ -830,21 +704,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_output[['id', 'question', 'answer']].to_csv('../../data/q_output_code_y.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# q_output.iloc[[14, 25, 13, 21], :].to_csv('chk.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -982,13 +847,22 @@
        "4  <Title>How do I extract a binary pattern from ...  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "q_output.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_output[['id', 'question', 'answer']].to_csv('./q_output_code_y.csv')"
    ]
   },
   {
