--- a/LLM/llama/ollama_n.ipynb
+++ b/LLM/llama/ollama_n.ipynb
@@ -22,19 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys, os\n",
-    "p = os.path.abspath('..')\n",
+    "p = os.path.abspath('../..')\n",
     "# p = p+r'\\config'\n",
     "sys.path.insert(1, p)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/q_output_code_y.csv', index_col = 0)"
+    "df = pd.read_csv('../../../data/q_output_code_y.csv', index_col = 0)"
    ]
   },
   {
