--- a/LLM/241201_calculate_acc.ipynb
+++ b/LLM/241201_calculate_acc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -80,75 +80,57 @@
      "text": [
       "sc_l_result_2_10_Y_1_sys_prompt4_0.2.csv\n",
       "80.0\n",
-      "         id gold o_result  cnt  equal_yn\n",
-      "0  74727945    0        0    5         1\n",
-      "1  74793352    0        0    5         1\n",
-      "2  75057003    1        1    5         1\n",
-      "3  75198212    2        1    5         0\n",
-      "4  76115814    1        0    4         0\n",
-      "5  76675433    2        2    5         1\n",
-      "6  76917593    0        0    4         1\n",
-      "7  77019129    1        1    5         1\n",
-      "8  77020489    1        1    5         1\n",
-      "9  77467788    1        1    5         1\n",
       "sc_l_result_2_10_Y_4_sys_prompt4_0.2.csv\n",
       "80.0\n",
-      "         id gold o_result  cnt  equal_yn\n",
-      "0  74693871    1        1    3         1\n",
-      "1  74936129    1        0    5         0\n",
-      "2  75266730    1        1    3         1\n",
-      "3  75492157    1        1    5         1\n",
-      "4  76045819    1        0    3         0\n",
-      "5  76774917    0        0    5         1\n",
-      "6  76784524    1        1    4         1\n",
-      "7  77068633    1        1    5         1\n",
-      "8  77370805    1        1    5         1\n",
-      "9  77543317    2        2    5         1\n",
       "sc_l_result_2_10_Y_2_sys_prompt4_0.2.csv\n",
       "80.0\n",
-      "         id gold o_result  cnt  equal_yn\n",
-      "0  74844950    1        1    5         1\n",
-      "1  75022065    0        1    3         0\n",
-      "2  75243277    0        1    4         0\n",
-      "3  76548866    1        1    3         1\n",
-      "4  76784524    1        1    4         1\n",
-      "5  76798081    0        0    3         1\n",
-      "6  76992629    1        1    5         1\n",
-      "7  77291783    2        2    3         1\n",
-      "8  77467788    1        1    5         1\n",
-      "9  77543317    2        2    4         1\n",
       "sc_l_result_2_10_Y_3_sys_prompt4_0.2.csv\n",
       "70.0\n",
-      "         id gold o_result  cnt  equal_yn\n",
-      "0  74793352    0        0    5         1\n",
-      "1  74844950    1        1    5         1\n",
-      "2  75179892    1        0    5         0\n",
-      "3  75460677    1        1    5         1\n",
-      "4  75995957    0        0    5         1\n",
-      "5  76045819    1        0    4         0\n",
-      "6  76367594    1        1    5         1\n",
-      "7  76570219    0        0    4         1\n",
-      "8  77068633    1        1    4         1\n",
-      "9  77150535    1        0    4         0\n",
       "sc_l_result_2_10_Y_0_sys_prompt4_0.2.csv\n",
       "70.0\n",
-      "         id gold o_result  cnt  equal_yn\n",
-      "0  74793352    0        0    5         1\n",
-      "1  75789316    0        0    3         1\n",
-      "2  75862649    2        2    5         1\n",
-      "3  76040179    1        2    4         0\n",
-      "4  76427264    1        0    2         0\n",
-      "5  76548866    1        2    4         0\n",
-      "6  77020489    1        1    5         1\n",
-      "7  77068633    1        1    5         1\n",
-      "8  77076663    2        2    5         1\n",
-      "9  77249095    0        0    5         1\n",
       "l_result_2_10_Y :  76.0\n"
      ]
     }
    ],
    "source": [
     "sc_calc_acc_condition_with_temp('l', 2, 10, 'Y','sys_prompt4', 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sc_l_result_2_10_Y_4_sys_prompt8_0.1.csv\n",
+      "80.0\n",
+      "sc_l_result_2_10_Y_5_sys_prompt8_0.1.csv\n",
+      "80.0\n",
+      "sc_l_result_2_10_Y_7_sys_prompt8_0.1.csv\n",
+      "90.0\n",
+      "sc_l_result_2_10_Y_0_sys_prompt8_0.1.csv\n",
+      "70.0\n",
+      "sc_l_result_2_10_Y_2_sys_prompt8_0.1.csv\n",
+      "90.0\n",
+      "sc_l_result_2_10_Y_8_sys_prompt8_0.1.csv\n",
+      "80.0\n",
+      "sc_l_result_2_10_Y_1_sys_prompt8_0.1.csv\n",
+      "100.0\n",
+      "sc_l_result_2_10_Y_3_sys_prompt8_0.1.csv\n",
+      "90.0\n",
+      "sc_l_result_2_10_Y_9_sys_prompt8_0.1.csv\n",
+      "60.0\n",
+      "sc_l_result_2_10_Y_6_sys_prompt8_0.1.csv\n",
+      "80.0\n",
+      "l_result_2_10_Y :  82.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sc_calc_acc_condition_with_temp('l', 2, 10, 'Y','sys_prompt8', 0.1)"
    ]
   },
   {
