--- a/LLM/1_acc_test.ipynb
+++ b/LLM/1_acc_test.ipynb
@@ -421,78 +421,78 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task l_2_10_Y_sys_prompt4_5_0.5 시작\n",
-      "Task l_2_10_Y_sys_prompt4_5_0.5 실행 중: 0\n"
+      "Task c_3_10_Y_sys_prompt8_5_0.01 시작\n",
+      "Task c_3_10_Y_sys_prompt8_5_0.01 실행 중: 0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "50it [08:41, 10.42s/it]\n"
+      "50it [09:18, 11.18s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task l_2_10_Y_sys_prompt4_5_0.5 실행 중: 1\n"
+      "Task c_3_10_Y_sys_prompt8_5_0.01 실행 중: 1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "50it [08:48, 10.57s/it]\n"
+      "50it [10:21, 12.43s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task l_2_10_Y_sys_prompt4_5_0.5 실행 중: 2\n"
+      "Task c_3_10_Y_sys_prompt8_5_0.01 실행 중: 2\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "50it [08:40, 10.40s/it]\n"
+      "50it [09:57, 11.94s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task l_2_10_Y_sys_prompt4_5_0.5 실행 중: 3\n"
+      "Task c_3_10_Y_sys_prompt8_5_0.01 실행 중: 3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "50it [08:22, 10.06s/it]\n"
+      "50it [10:54, 13.08s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task l_2_10_Y_sys_prompt4_5_0.5 실행 중: 4\n"
+      "Task c_3_10_Y_sys_prompt8_5_0.01 실행 중: 4\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "50it [08:42, 10.45s/it]\n"
+      "50it [10:29, 12.59s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task l_2_10_Y_sys_prompt4_5 완료\n",
+      "Task c_3_10_Y_sys_prompt8_5 완료\n",
       "모든 작업 완료\n"
      ]
     }
@@ -521,7 +521,7 @@
     "    # process1 = Process(target=task, args=('l', 1, 10, 'Y', 10, 'sys_prompt7', 5))\n",
     "    # process2 = Process(target=task, args=('l', 1, 10, 'N', 10, 'sys_prompt7', 5))\n",
     "\n",
-    "    process3 = Process(target=task, args=('l', 2, 10, 'Y', 5, 'sys_prompt4', 5, 0.5))\n",
+    "    process3 = Process(target=task, args=('c', 3, 10, 'Y', 5, 'sys_prompt8', 5, 0.01))\n",
     "    # process4 = Process(target=task, args=('l', 2, 10, 'N', 10, 'sys_prompt7', 5))\n",
     "\n",
     "    # process5 = Process(target=task, args=('l', 3, 10, 'Y', 10, 'sys_prompt7', 5))\n",
