--- a/annotating/0_data_extract.ipynb
+++ b/annotating/0_data_extract.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +35,9 @@
     "try:\n",
     "    cur = conn.cursor()\n",
     "    cur.execute(\"\\\n",
-    "select a.id  \\\n",
+    "select a.id, a.creationdate \\\n",
     "  from posts a \\\n",
-    "  where a.creationdate between '2022-11-30' and '2023-11-30' \\\n",
+    "  where a.creationdate between '2021-11-30' and '2023-11-30' \\\n",
     "    and a.posttypeid = '1' \\\n",
     "    and a.tags like '%<python>%' \\\n",
     "; \\\n",
@@ -54,18 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.DataFrame(rows, columns = [\n",
-    "  'id' \n",
+    "  'id' , 'creationdate'\n",
     "])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
