--- a/LLM/241201_calculate_acc.ipynb
+++ b/LLM/241201_calculate_acc.ipynb
@@ -69,62 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_15.csv\n",
-      "100.0\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_13.csv\n",
-      "87.5\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_4.csv\n",
-      "88.88888888888889\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_5.csv\n",
-      "75.0\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_3.csv\n",
-      "100.0\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_18.csv\n",
-      "71.42857142857143\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_19.csv\n",
-      "60.0\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1.csv\n",
-      "100.0\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_16.csv\n",
-      "85.71428571428571\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_2.csv\n",
-      "88.88888888888889\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_10.csv\n",
-      "100.0\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_1.csv\n",
-      "100.0\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_7.csv\n",
-      "90.0\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_9.csv\n",
-      "83.33333333333334\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_6.csv\n",
-      "100.0\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_0.csv\n",
-      "77.77777777777779\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_12.csv\n",
-      "100.0\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_11.csv\n",
-      "100.0\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_14.csv\n",
-      "69.23076923076923\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_8.csv\n",
-      "90.9090909090909\n",
-      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_17.csv\n",
-      "75.0\n",
-      "l_result_4_15_Y :  87.43169398907104\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sc_calc_acc_condition_with_temp_with_sc('l', 4, 15, 'Y', 30, 'sys_prompt8', 5,  0.01, 'ver1')\n",
-    "# process3 = Process(target=task, args=('l', 4, 15, 'Y', 30, 'sys_prompt8', 3, 0.01, 'ver1'))"
+    "# sc_calc_acc_condition_with_temp_with_sc('l', 4, 15, 'Y', 30, 'sys_prompt8', 5,  0.01, 'ver1')\n",
+    "# # process3 = Process(target=task, args=('l', 4, 15, 'Y', 30, 'sys_prompt8', 3, 0.01, 'ver1'))"
    ]
   },
   {
@@ -162,7 +112,7 @@
     "\n",
     "            df_eval['equal_yn'] = np.where(df_eval['gold']==df_eval['o_result'], 1, 0)\n",
     "            acc = (df_eval['equal_yn'].sum()/df_eval.shape[0])*100  \n",
-    "            print(acc)\n",
+    "            # print(acc)\n",
     "            # print(df_eval)\n",
     "            df = pd.concat([df, df_eval], axis =0)\n",
     "            \n",
@@ -173,14 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sc_calc_acc_condition_with_temp_with_sc('l', 4, 30, 'Y', 100, 'sys_prompt8', 5,  0.01, 'ver2')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -234,9 +186,7 @@
     }
    ],
    "source": [
-    "sc_calc_acc_condition_with_temp_with_sc('l', 4, 15, 'Y', 30, 'sys_prompt8', 5,  0.01, 'ver1')\n",
-    "\n",
-    "# Process(target=task, args=('l', 4, 15, 'Y', 30, 'sys_prompt8', 5, 0.01, 'ver1'))"
+    "# sc_calc_acc_condition_with_temp_with_sc('l', 4, 15, 'Y', 30, 'sys_prompt8', 5,  0.01, 'ver1')"
    ]
   },
   {
