--- a/LLM/241201_calculate_acc.ipynb
+++ b/LLM/241201_calculate_acc.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,8 @@
     "\n",
     "            tmp['gold'] = tmp['answer_encode'].apply(lambda x : re.sub(r'[^012]', '', x))\n",
     "            tmp['o_result'] = tmp['result'].apply(lambda x : re.sub(r'[^012]', '', x))\n",
-    "            \n",
+    "            tmp = tmp[tmp['o_result'].isin(['1', '0', '2'])]\n",
+    "\n",
     "            \n",
     "            gold_df = tmp[['id', 'gold']].drop_duplicates()\n",
     "            chk_cnt = tmp.groupby(['id', 'o_result']).count().reset_index()[['id', 'o_result', 'question']]\n",
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,13 +83,7 @@
       "84.0\n",
       "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_0.csv\n",
       "86.66666666666667\n",
-      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_10.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_10.csv\n",
       "90.0\n",
       "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_64.csv\n",
       "72.72727272727273\n",
@@ -295,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,16 +334,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_15.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_13.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_4.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_5.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_3.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_18.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_19.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_16.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_2.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_10.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_1.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_7.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_9.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_6.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_0.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_12.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_11.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_14.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_8.csv\n",
+      "sc_l_result_4_15_Y_30_sys_prompt8_0.01_ver1_17.csv\n",
+      "l_result_4_15_Y :  87.43169398907104\n"
+     ]
+    }
+   ],
    "source": [
     "sc_calc_acc_condition_with_temp_with_sc('l', 4, 15, 'Y', 30, 'sys_prompt8', 5,  0.01, 'ver1')"
    ]
@@ -358,6 +375,221 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_16.csv\n",
+      "78.94736842105263\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_84.csv\n",
+      "84.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_0.csv\n",
+      "86.66666666666667\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_10.csv\n",
+      "90.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_64.csv\n",
+      "72.72727272727273\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_35.csv\n",
+      "81.25\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_72.csv\n",
+      "85.71428571428571\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_2.csv\n",
+      "86.66666666666667\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_12.csv\n",
+      "90.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_74.csv\n",
+      "83.33333333333334\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_62.csv\n",
+      "82.35294117647058\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_54.csv\n",
+      "90.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_32.csv\n",
+      "91.30434782608695\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_45.csv\n",
+      "68.42105263157895\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_18.csv\n",
+      "72.22222222222221\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_86.csv\n",
+      "83.33333333333334\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_15.csv\n",
+      "86.66666666666667\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_33.csv\n",
+      "100.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_3.csv\n",
+      "90.47619047619048\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_88.csv\n",
+      "80.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_98.csv\n",
+      "90.47619047619048\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_99.csv\n",
+      "77.27272727272727\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_69.csv\n",
+      "85.71428571428571\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_11.csv\n",
+      "84.61538461538461\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_40.csv\n",
+      "77.27272727272727\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_31.csv\n",
+      "91.66666666666666\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_52.csv\n",
+      "87.5\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_28.csv\n",
+      "83.33333333333334\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_94.csv\n",
+      "89.47368421052632\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_77.csv\n",
+      "85.71428571428571\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_20.csv\n",
+      "76.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_87.csv\n",
+      "87.5\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_44.csv\n",
+      "83.33333333333334\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_71.csv\n",
+      "90.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_57.csv\n",
+      "66.66666666666666\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_58.csv\n",
+      "88.88888888888889\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_24.csv\n",
+      "80.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_75.csv\n",
+      "100.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_19.csv\n",
+      "75.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_38.csv\n",
+      "76.47058823529412\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_22.csv\n",
+      "84.21052631578947\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_1.csv\n",
+      "89.47368421052632\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_90.csv\n",
+      "83.33333333333334\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_73.csv\n",
+      "88.23529411764706\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_78.csv\n",
+      "100.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_93.csv\n",
+      "80.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_82.csv\n",
+      "82.14285714285714\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_26.csv\n",
+      "94.11764705882352\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_42.csv\n",
+      "86.36363636363636\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_17.csv\n",
+      "88.88888888888889\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_30.csv\n",
+      "90.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_13.csv\n",
+      "86.66666666666667\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_91.csv\n",
+      "84.21052631578947\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_59.csv\n",
+      "87.5\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_34.csv\n",
+      "86.66666666666667\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_97.csv\n",
+      "80.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_8.csv\n",
+      "71.42857142857143\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_80.csv\n",
+      "86.20689655172413\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_9.csv\n",
+      "69.56521739130434\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_41.csv\n",
+      "80.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_5.csv\n",
+      "80.95238095238095\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_14.csv\n",
+      "86.36363636363636\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_53.csv\n",
+      "86.36363636363636\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_29.csv\n",
+      "94.44444444444444\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_66.csv\n",
+      "83.33333333333334\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_56.csv\n",
+      "86.95652173913044\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_83.csv\n",
+      "90.47619047619048\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_48.csv\n",
+      "78.94736842105263\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_36.csv\n",
+      "88.23529411764706\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_43.csv\n",
+      "80.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_55.csv\n",
+      "68.42105263157895\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_7.csv\n",
+      "90.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_92.csv\n",
+      "90.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_25.csv\n",
+      "75.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_81.csv\n",
+      "76.47058823529412\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_60.csv\n",
+      "88.88888888888889\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_21.csv\n",
+      "87.5\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_39.csv\n",
+      "83.33333333333334\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_61.csv\n",
+      "76.19047619047619\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_95.csv\n",
+      "80.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_49.csv\n",
+      "84.21052631578947\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_67.csv\n",
+      "82.6086956521739\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_65.csv\n",
+      "94.44444444444444\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_46.csv\n",
+      "87.5\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_37.csv\n",
+      "70.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_63.csv\n",
+      "66.66666666666666\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_23.csv\n",
+      "79.16666666666666\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_27.csv\n",
+      "95.23809523809523\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_50.csv\n",
+      "84.0\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_79.csv\n",
+      "83.33333333333334\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_68.csv\n",
+      "71.42857142857143\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_76.csv\n",
+      "94.73684210526315\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_51.csv\n",
+      "88.88888888888889\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_96.csv\n",
+      "76.47058823529412\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_6.csv\n",
+      "85.71428571428571\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_70.csv\n",
+      "80.95238095238095\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_89.csv\n",
+      "79.16666666666666\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_85.csv\n",
+      "73.91304347826086\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_4.csv\n",
+      "88.88888888888889\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_47.csv\n",
+      "68.18181818181817\n",
+      "l_result_4_30_Y :  83.52098259979529\n"
+     ]
+    }
+   ],
    "source": [
     "sc_calc_acc_condition_with_temp_with_sc('l', 4, 30, 'Y', 100, 'sys_prompt8', 5,  0.01, 'ver2')"
    ]
@@ -557,7 +789,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_stackoverflow_src",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
