--- a/DA/0_data_extract.ipynb
+++ b/DA/0_data_extract.ipynb
@@ -16,19 +16,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'psycopg2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpsycopg2\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'psycopg2'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import psycopg2\n",
     "import pandas as pd\n",
@@ -169,21 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'conf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m conn \u001b[38;5;241m=\u001b[39m psycopg2\u001b[38;5;241m.\u001b[39mconnect(host \u001b[38;5;241m=\u001b[39m \u001b[43mconf\u001b[49m\u001b[38;5;241m.\u001b[39mdatabase_user[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhost\u001b[39m\u001b[38;5;124m'\u001b[39m], dbname\u001b[38;5;241m=\u001b[39mconf\u001b[38;5;241m.\u001b[39mdatabase_user[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdbname\u001b[39m\u001b[38;5;124m'\u001b[39m], user\u001b[38;5;241m=\u001b[39mconf\u001b[38;5;241m.\u001b[39mdatabase_user[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m'\u001b[39m], password\u001b[38;5;241m=\u001b[39mconf\u001b[38;5;241m.\u001b[39mdatabase_user[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpassword\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m      3\u001b[0m     cur \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mcursor()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'conf' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
     "try:\n",
@@ -216,21 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'rows' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_body \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[43mrows\u001b[49m, columns \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      2\u001b[0m   \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcreationdate\u001b[39m\u001b[38;5;124m'\u001b[39m \n\u001b[1;32m      3\u001b[0m , \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m \n\u001b[1;32m      4\u001b[0m , \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mposttypeid\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      5\u001b[0m , \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      6\u001b[0m , \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mowneruserid\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      7\u001b[0m , \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbody\u001b[39m\u001b[38;5;124m'\u001b[39m \n\u001b[1;32m      8\u001b[0m , \u001b[38;5;124m'\u001b[39m\u001b[38;5;124manswered_yn\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      9\u001b[0m ])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'rows' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_body = pd.DataFrame(rows, columns = [\n",
     "  'creationdate' \n",
@@ -245,21 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pickle' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# 전체 데이터셋 \u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../data/df_body.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m----> 3\u001b[0m     \u001b[43mpickle\u001b[49m\u001b[38;5;241m.\u001b[39mdump(df_body, f)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pickle' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
     "with open('../../data/df_body.pkl', 'wb') as f:\n",
@@ -2688,7 +2640,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "conn = psycopg2.connect(host = conf.database_user['host'], dbname=conf.database_user['dbname'], user=conf.database_user['user'], password=conf.database_user['password'])\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "    cur.execute(\"\\\n",
+    "select xx.cdate, count(xx.id) as cnt, 300 as sample_num, 300/count(xx.id)*100 as rate \\\n",
+    "  from ( \\\n",
+    "\t\tselect id, to_char(creationdate, 'yyyy-mm-dd') as cdate \\\n",
+    "\t\t  from posts \\\n",
+    "\t\t where posttypeid ='1' \\\n",
+    "\t\t   and tags like '%<python>%' \\\n",
+    "\t\t   and creationdate between '2021-11-30' and '2023-11-30' \\\n",
+    "  \t\t) xx, \\\n",
+    "  \t\t( \\\n",
+    "  \t\tselect distinct to_char(creationdate, 'yyyy-mm-dd') as cdate \\\n",
+    "\t\t  from tt_posts_difficulty_target \\\n",
+    "\t\t where ver >= 50000 \\\n",
+    "  \t\t) yy \\\n",
+    " where xx.cdate = yy.cdate \\\n",
+    " group by xx.cdate \\\n",
+    "; \\\n",
+    "\" \n",
+    "    )\n",
+    "    rows = cur.fetchall()\n",
+    "    \n",
+    "except psycopg2.DatabaseError as db_err:\n",
+    "    print(db_err)\n",
+    "finally : \n",
+    "  cur.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(rows, columns = [\n",
+    "'cdate', 'cnt', 'sample_num', 'rate'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 데이터셋 \n",
+    "with open('../../data/df_sample_rate.pkl', 'wb') as f:\n",
+    "    pickle.dump(df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2723,7 +2741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2734,7 +2752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2749,11 +2767,25 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv_stackoverflow_src",
    "language": "python",
    "name": "python3"
   },
