--- a/matters_arising/Fig1.ipynb
+++ b/matters_arising/Fig1.ipynb
@@ -2901,7 +2901,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_stackoverflow_src",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
